# Eventure-usersService

./: .dockerignore  Dockerfile  compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml  main.yml
alembic/versions/: 2024_12_03_1404-652bc7140f5e_user_model_additions.py  2024_12_03_1458-1c97cfdde7e0_user_model_additions.py  2024_12_03_1631-262201b6bf9a_fucking_migrations.py
api_v1/: __init__.py
api_v1/chatsService/: __init__.py  crud.py  schemas.py  views.py
api_v1/chatsService/chatWebSocket/: __init__.py  chatWS.py  connection_manager.py
api_v1/friendsSystem/: __init__.py  crud.py  views.py
api_v1/imageService/: __init__.py  crud.py  views.py
auth/: __init__.py  auth.py  shcemas.py  views.py
core/: config.py
core/models/: Conversation.py  Friendship.py  Message.py  User.py  __init__.py  conversation_user_association.py
