[tool.poetry]
name = "usersservice"
version = "0.1.0"
description = ""
authors = ["UkralStul <stoyanov03@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = {extras = ["standart"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
pydantic-settings = "^2.6.0"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
alembic = "^1.13.3"
websockets = "^13.1"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
passlib = "^1.7.4"
bcrypt = "^4.2.0"
python-multipart = "^0.0.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
